--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -32,6 +32,7 @@ env:
   secret:
     - RAILS_MASTER_KEY
     - MYSQL_ROOT_PASSWORD
+    - SENDGRID_API_KEY
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
