--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -22,6 +22,7 @@ env:
     - DO_SPACES_SECRET_KEY
     - DO_SPACES_BUCKET
     - DO_SPACES_REGION
+    - AWS_REGION
   clear:
     SOLID_QUEUE_IN_PUMA: true
     DB_HOST: spreent-db
