--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,7 +11,7 @@ amazon:
   service: S3
   access_key_id: <%= ENV['DO_SPACES_ACCESS_KEY'] %>
   secret_access_key: <%= ENV['DO_SPACES_SECRET_KEY'] %>
-  region: <%= ENV['DO_SPACES_REGION'] %>
+  region: tor1
   bucket: <%= ENV['DO_SPACES_BUCKET'] %>
   endpoint: https://<%= ENV['DO_SPACES_REGION'] %>.digitaloceanspaces.com
 
