--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ amazon:
   access_key_id: <%= ENV['DO_SPACES_ACCESS_KEY'] %>
   secret_access_key: <%= ENV['DO_SPACES_SECRET_KEY'] %>
   region: tor1
-  bucket: <%= ENV['DO_SPACES_BUCKET'] %>
+  bucket: spreent
   endpoint: https://<%= ENV['DO_SPACES_REGION'] %>.digitaloceanspaces.com
 
 # Remember not to checkin your GCS keyfile to a repository
