--- a/test/fixtures/invitation_codes.yml
+++ b/test/fixtures/invitation_codes.yml
@@ -1,13 +1,2 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  code: MyString
-  expires_at: 2025-03-03 21:15:38
-  max_uses: 1
-  used_count: 1
-
-two:
-  code: MyString
-  expires_at: 2025-03-03 21:15:38
-  max_uses: 1
-  used_count: 1
+  code: "BRUNY2025"
