--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@rails/activestorage": "^8.0.100",
+    "@tailwindcss/typography": "^0.5.16",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.0",
     "zxcvbn": "^4.4.2"
