fix pour erreur version

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,19 +8,18 @@ on:
 jobs:
   test:
     name: Test Application
-    uses: ./github/workflows/rails-test.yml
+    uses: ./github/workflows/rails-test.yml@main
     secrets:
       RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
 
   create-release:
     name: Create Release
     needs: test
-    uses: ./github/workflows/auto-release.yml
+    uses: ./github/workflows/auto-release.yml@main
 
   deploy:
     name: Deploy Application
     needs: [test, create-release]
-    uses: ./.github/workflows/kamal-deploy.yml
+    uses: ./.github/workflows/kamal-deploy.yml@main
     secrets:
       RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
-      
