--- a/.github/workflows/rails-test.yml
+++ b/.github/workflows/rails-test.yml
@@ -8,6 +8,8 @@ on:
     secrets:
       RAILS_MASTER_KEY:
         required: true
+      MYSQL_ROOT_PASSWORD:
+        required: true
 
 jobs:
   test:
