--- a/.github/workflows/rails-test.yml
+++ b/.github/workflows/rails-test.yml
@@ -27,7 +27,9 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
-
+    env:
+      RAILS_ENV: test
+      
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
