--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -48,8 +48,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: patch
-          custom_tag: ${{ steps.get_latest_tag.outputs.latest_tag != 'v.0.0.0' && '' || 'v0.1.0' }}
-          tag_prefix: v
+          custom_tag: ${{ steps.get_latest_tag.outputs.latest_tag != 'v0.0.0' && '' || 'v0.1.0' }}
 
       - name: Generate changelog with commit titles
         id: generate_changelog
