--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -49,6 +49,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: patch
           custom_tag: ${{ steps.get_latest_tag.outputs.latest_tag != 'v0.0.0' && '' || 'v0.1.0' }}
+          fetch_all_tags: true
 
       - name: Generate changelog with commit titles
         id: generate_changelog
