--- a/.github/workflows/discord-notification.yml
+++ b/.github/workflows/discord-notification.yml
@@ -60,7 +60,7 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           COMMIT_SHA: ${{ inputs.commit_sha || github.sha }}
           DEPLOYED_BY: ${{ inputs.deployed_by || github.actor }}
-          DEPLOYMENT_TIME: ${{ inputs.deployment_time || format('{0:yyyy-MM-dd HH:mm:ss} UTC', github.event.repository.updated_at) }}
+          DEPLOYMENT_TIME: ${{ inputs.deployment_time }}
         run: |
           RELEASE_NAME="${{ github.event.release.name }}"
           RELEASE_TAG="${{ github.event.release.tag_name }}"
