--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -46,10 +46,13 @@ jobs:
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: patch
-          custom_tag: ${{ steps.get_latest_tag.outputs.latest_tag != 'v0.0.0' && '' || 'v0.1.0' }}
-          fetch_all_tags: true
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            default_bump: patch
+            custom_tag: ${{ steps.get_latest_tag.outputs.latest_tag != 'v0.0.0' && '' || 'v0.1.0' }}
+            create_annotated_tag: true
+            tag_prefix: v
+            dry_run: false
+            fetch_all_tags: true
 
       - name: Generate changelog with commit titles
         id: generate_changelog
