--- a/.github/workflows/kamal-deploy.yml
+++ b/.github/workflows/kamal-deploy.yml
@@ -49,11 +49,14 @@ jobs:
         run: gem install kamal
 
       - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.7.0
+        with:
+            ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Add Known Hosts
         run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -t rsa spreent.ca >> ~/.ssh/known_hosts
+            mkdir -p ~/.ssh
+            ssh-keyscan -t rsa spreent.ca >> ~/.ssh/known_hosts
 
       - name: Build and deploy with Kamal
         run: |
