--- a/.github/workflows/kamal-deploy.yml
+++ b/.github/workflows/kamal-deploy.yml
@@ -20,6 +20,8 @@ on:
         required: true
       SERVER_IP:
         required: true
+      SSH_PRIVATE_KEY:
+        required: true
 
 jobs:
   deploy:
