--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -66,10 +66,9 @@ jobs:
           echo "" >> changelog.md
           echo "$COMMITS" >> changelog.md
           
-          CHANGELOG="${COMMITS//'%'/'%25'}"
-          CHANGELOG="${CHANGELOG//$'\n'/'%0A'}"
-          CHANGELOG="${CHANGELOG//$'\r'/'%0D'}"
-          echo "changelog=$CHANGELOG" >> $GITHUB_OUTPUT
+          echo "changelog<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMITS" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Create Release
         id: create_release
